# binance-auto-trader

./: Cargo.toml  Config.toml  README.md  config.toml
src/: account.rs  buy.rs  config.rs  error.rs  general.rs  main.rs  market.rs  notify.rs  sell.rs  watch.rs
src/_app/: buy.rs  error.rs  mod.rs  notify.rs  watch.rs
src/app/: account.rs  buy.rs  config.rs  mod.rs  notify.rs  sell.rs  watch.rs
